plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id "org.openapi.generator" version "7.15.0"
    id 'java-library'
    id "com.github.node-gradle.node" version "7.1.0"
}

def frontendPath = "$projectDir/../frontend"
def backendStaticPath = "$projectDir/src/main/resources/static"
def frontendDistPath = "$frontendPath/dist"

group = 'cloudflight.integra'
version = '0.0.1-SNAPSHOT'
description = 'backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

node {
    version = '22.17.1'
    npmVersion = '10.9.2'
    download = true
    nodeProjectDir = file(frontendPath)
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.1'
    testImplementation 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.postgresql:postgresql'

    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
}


openApiGenerate {
    generatorName = "typescript-angular"
    inputSpec = "${projectDir}/openapi.yaml"
    outputDir = "$frontendPath/typescript-client"
    apiPackage = "api"
    modelPackage = "model"
}

tasks.register('generateOpenApiDocs', Test) {
    dependsOn testClasses
    useJUnitPlatform()

    filter {
        includeTestsMatching 'cloudflight.integra.backend.OpenApiExportTest'
    }

    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath

    outputs.upToDateWhen { false }

    doFirst {
        println "========================================"
        println "OPENAPI DOCS: Running OpenApiExportTest"
        println "========================================"
    }

    doLast {
        def openapiFile = file("${projectDir}/openapi.yaml")
        if (openapiFile.exists()) {
            println "OPENAPI DOCS: openapi.yaml generated successfully"
            println "  Location: ${projectDir}/openapi.yaml"
            println "  Size: ${openapiFile.length()} bytes"
        } else {
            println "WARNING: openapi.yaml was NOT generated!"
        }
        println "========================================\n"
    }
}

tasks.named('openApiGenerate') {
    dependsOn tasks.named('generateOpenApiDocs')
}

tasks.named('npmInstall') {
    doFirst {
        println "========================================"
        println "NPM: Installing dependencies"
        println "========================================"
        println "  Working dir: $frontendPath"
        println "  Node version: ${node.version.get()}"
        println "  NPM version: ${node.npmVersion.get()}"
    }

    doLast {
        println "NPM: Dependencies installed"
        println "========================================\n"
    }
}

tasks.register('buildFrontend', NpmTask) {
    dependsOn npmInstall
    dependsOn tasks.named('openApiGenerate')
    workingDir = file(frontendPath)
    args = ['run', 'build']

    doFirst {
        println "========================================"
        println "FRONTEND: Building frontend"
        println "========================================"
        println "  Working dir: $frontendPath"
        println "  Command: npm run build"
    }

    doLast {
        println "FRONTEND: Build completed"
        println "========================================"

        def distDir = file(frontendDistPath)
        if (!distDir.exists()) {
            throw new GradleException("Frontend dist directory does not exist: $frontendDistPath")
        }

        println "FRONTEND: dist directory contents:"
        distDir.eachFileRecurse { f ->
            if (f.isFile()) {
                println "  - ${f.path.substring(distDir.path.length())} (${f.length()} bytes)"
            }
        }
        println "========================================\n"

        println "========================================"
        println "FRONTEND: Copying to build output directory"
        println "========================================"

        def buildStaticPath = "${buildDir}/resources/main/static"
        println "  From: $frontendDistPath"
        println "  To: $buildStaticPath"

        project.copy {
            from frontendDistPath
            into buildStaticPath
        }

        println "FRONTEND: Copy complete. Build static directory contents:"
        def staticDir = file(buildStaticPath)
        staticDir.eachFileRecurse { f ->
            if (f.isFile()) {
                println "  - ${f.path.substring(staticDir.path.length())} (${f.length()} bytes)"
            }
        }
        println "========================================\n"
    }
}

bootJar {
    dependsOn buildFrontend
    mustRunAfter processResources

    doFirst {
        println "========================================"
        println "BOOTJAR: Building Spring Boot JAR"
        println "========================================"
        println "  Archive name: ${archiveFileName.get()}"

        def buildStaticDir = file("${buildDir}/resources/main/static")
        if (buildStaticDir.exists() && buildStaticDir.isDirectory()) {
            println "BOOTJAR: Recursively listing all static files from build:"
            buildStaticDir.eachFileRecurse { f ->
                if (f.isFile()) {
                    def relativePath = f.path.substring(buildStaticDir.path.length())
                    println "  - ${relativePath} (${f.length()} bytes)"
                }
            }
        } else {
            println "WARNING: No static files found in build output"
        }
    }

    doLast {
        println "BOOTJAR: Completed successfully"
        println "  Output: ${archiveFile.get().asFile}"
        println "  Size: ${archiveFile.get().asFile.length()} bytes"
        println "========================================\n"
    }
}


test {
    useJUnitPlatform {
        if (project.hasProperty('excludeTags')) {
            excludeTags project.property('excludeTags').split(',')
        }
    }
}
